@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2005-12-30 20:36:27 $ $Revision: 1.3 $
+\  $Date: 2005-12-30 21:25:45 $ $Revision: 1.4 $
 \
 \ ==============================================================================
 
@@ -32,6 +32,7 @@ include ffl/scl.fs
 include ffl/sci.fs
 include ffl/str.fs
 include ffl/tis.fs
+include ffl/tos.fs
 
 \ ==============================================================================
 
