@@ -1,4 +1,5 @@
 0.2.0
+* tos: new module (Text output stream)
 * tis: new module (Text input stream)
 * chr: constants for ascii 0 till 31 and 127
 * str: new module (Text string)
